2007-02-04  Stefan Jahn  <stefan@lkcc.org>

	* mscross.cpp (MScross): Added microstrip model selctors
	to the properties of the microstrip cross.

2006-10-29  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2p1.h (class hicumL2p1): Added HICUM L2 v2.1 model.

	* HBT_X.h (class HBT_X): Added FBH HBT device model.

2006-09-24  Stefan Jahn  <stefan@lkcc.org>

	* tr_sim.cpp (TR_Sim): Added 'MaxStep' property.

2006-09-03  Stefan Jahn  <stefan@lkcc.org>

	* opt_sim.cpp (createASCOFiles): Fixed a bug occuring when
	trying to use ASCO on Win32.

2006-08-30  Stefan Jahn  <stefan@lkcc.org>

	* opt_sim.cpp (loadASCOout): Evaluate output file of ASCO and
	puts final values into initial values of the component.
	(createASCOnetlist): Modifies netlist for use with ASCO.

2006-08-21  Stefan Jahn  <stefan@lkcc.org>

	* opt_sim.cpp (createASCOFiles): Moved this function here from
	the optimization dialog.  Netlist creation fixed.  Properties
	are saves properly now (translation independent).

	* optimizedialog.cpp (OptimizeDialog): Improved and finished
	the dialog for now.

2006-08-20  Stefan Jahn  <stefan@lkcc.org>

	* optimizedialog.cpp (createASCOFiles): Added the DE properteries
	to the dialog and implemented the creation of the configuration
	files used by ASCO.

2006-08-19  Stefan Jahn  <stefan@lkcc.org>

	* vrect.cpp (vRect), irect.cpp (iRect): Added new properties
	for delay, rise and fall time.

2006-07-23  Stefan Jahn  <stefan@lkcc.org>

	* tr_sim.cpp (TR_Sim): Added new property 'initialDC'.

2006-07-02  Stefan Jahn  <stefan@lkcc.org>

	* dc_sim.cpp (DC_Sim), tr_sim.cpp (TR_Sim): Allow choosing
	'GolubSVD' as equation solver.

2006-05-22  Stefan Jahn  <stefan@lkcc.org>

	* tline.cpp (TLine): Changed default value of 'Alpha' to "0 dB".

2006-04-27  Stefan Jahn  <stefan@lkcc.org>

	* sparamfile.cpp (SParamFile): Added new 'duringDC' property.

2006-01-31  Stefan Jahn  <stefan@lkcc.org>

	* coaxialline.cpp (CoaxialLine): Applied some useful default