@@ -55,7 +55,7 @@ Jose L. Redrejo Rodriguez <jredrejo@edu.juntaextremadura.net> for
 Vincent Habchi, F5RCS <10.50@free.fr> for the French translations.  Also
 	for contributing to the filter synthesis program.
 
-Toyoyuki Ishikawa <ishikawa@conceptkeeper.net> for the Japanese
+Toyoyuki Ishikawa <toyoishi@gmail.com> for the Japanese
 	translations.  Also for initiating the filter synthesis and
 	attenuator synthesis program.
 
